# cpp2sir

./: .gitignore  CMakeLists.txt  LICENSE  README.markdown  TODO  ast_pretty_printer.cpp  cfg.hpp  cfg_builder.cpp  cfg_builder.hpp  cfg_json_writer.cpp  cfg_json_writer.hpp  main.cpp  mangle.cpp  mangle.h  reg.hpp  unit_navigator.cpp  unit_navigator.hpp  util.cpp  util.hpp
json/: CMakeLists.txt
test/: agg_init.cfg  array_subscript.cfg  asm.cfg  bind_to_constref.cfg  break_cont_dest.cfg  comma.cfg  construct_init_list.cfg  construct_local.cfg  construct_local_dest.cfg  construct_temp.cfg  construct_temp_dest.cfg  cxxfunctionalcastexpr.cfg  declstmt_varptr.cfg  do.cfg  empty.cfg  empty_fun.cfg  enum.cfg  expr_ret.cfg  for.cfg  goto.cfg  if.cfg  lifetime_exc.cfg  lifetime_exc.cpp  locals.cfg  match_cfgs.py  member.cfg  namespace.cfg  new.cfg  new.cpp  nothrow.cfg  nothrow.cpp  null.cfg  params.cfg  pok.cpp  reference_return_type.cfg  return.cfg  return.cpp  return_dest.cfg  return_dest.cpp  run_test.py  (+16 more)
tools/: cfg2dot.py  cfg2texdot.py  delete_nodes.py  merge.py  pretty_print.py  purge_unreachable.py  tests2pdf.py
